# pathvar

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish-to-pypi.yml
src/pathvar/: project.py
tests/: test_project.py
